crates/mun_compiler/src/snapshots/mun_compiler__annotate_snippets_builders__tests__annotation_builder_snapshot.snap
---
source: crates/mun_compiler/src/annotate_snippets_builders.rs
expression: "AnnotationBuilder::new(AnnotationType::Note).id(\"1\".to_string()).label(\"test annotation\".to_string()).build()"
---
Annotation {
    id: Some(
        "1",
    ),
    label: Some(
        "test annotation",
    ),
    annotation_type: Note,
}
