crates/mun_compiler/src/snapshots/mun_compiler__annotate_snippets_builders__tests__slice_builder_snapshot.snap
---
source: crates/mun_compiler/src/annotate_snippets_builders.rs
expression: "SliceBuilder::new(true).origin(\"/tmp/usr/test.mun\".to_string()).source_annotation((14,\n                                                                                   20),\n                                                                                  \"test source annotation\".to_string(),\n                                                                                  AnnotationType::Note).build(source_code,\n                                                                                                              source_code.len(),\n                                                                                                              &line_index)"
---
Slice {
    source: "fn foo():float{\n48\n}",
    line_start: 1,
    origin: Some(
        "/tmp/usr/test.mun",
    ),
    annotations: [
        SourceAnnotation {
            range: (
                14,
                22,
            ),
            label: "test source annotation",
            annotation_type: Note,
        },
    ],
    fold: true,
}
